clusters/cluster/apps/media/prowlarr/deployment-prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: media/prowlarr
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc
