clusters/cluster/apps/media/prowlarr/service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: apps
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
      name: http
