clusters/cluster/apps/media/prowlarr/ingress-prowlarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: apps
spec:
  rules:
    - host: prowlarr.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
